[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/game_scene.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui_scenes/beat_keeper.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ui_scenes/layout_manager.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/helper_scenes/cheer_recorder.tscn" type="PackedScene" id=4]

[node name="GameScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.45098, 0.45098, 0.45098, 1 )

[node name="BeatKeeper" parent="." instance=ExtResource( 2 )]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="LayoutManager" parent="." instance=ExtResource( 3 )]

[node name="CheerRecorder" parent="." instance=ExtResource( 4 )]
beat_keeper_path = NodePath("../BeatKeeper")

[connection signal="beat" from="BeatKeeper" to="CheerRecorder" method="_on_beat"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="cheer" from="LayoutManager" to="CheerRecorder" method="_on_cheer"]
